Added the option to send image strech option

--- a/Firefly.Wpf.MenuDemo.csproj
+++ b/Firefly.Wpf.MenuDemo.csproj
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
@@ -11,7 +11,7 @@
     <DefaultClrNameSpace>IPhoneMenu</DefaultClrNameSpace>
     <RootNamespace>Firefly.Wpf.MenuDemo</RootNamespace>
     <AssemblyName>Firefly.Wpf.MenuDemo</AssemblyName>
-    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <TargetFrameworkProfile>
     </TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
@@ -30,6 +30,7 @@
     <WarningLevel>4</WarningLevel>
     <PlatformTarget>x86</PlatformTarget>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -38,8 +39,13 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="ENV, Version=3.4.24.30344, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>bin\Debug\ENV.dll</HintPath>
+    </Reference>
     <Reference Include="Firefly.Box">
       <HintPath>..\..\FireflyMigration\NorthwindUP\Dotnet\Firefly.Box.Dll</HintPath>
     </Reference>
@@ -140,12 +146,6 @@
     <EmbeddedResource Include="NewMenu\UI\MenuSample.UI.resx">
       <DependentUpon>MenuSample.UI.cs</DependentUpon>
     </EmbeddedResource>
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\FireflyMigration\NorthwindUP\Dotnet\ENV\ENV.csProj">
-      <Project>{0404cc2b-994d-4b55-9568-31db405855fa}</Project>
-      <Name>ENV</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath32)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
